# monument-dashboard-preswald

./: README.md  hello.py  preswald.toml  pyproject.toml
data/: monuments_geo.geojson
