[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monuments"
version = "0.1.0"
description = "A Preswald app showcasing world monuments"
requires-python = ">=3.8"
dependencies = [
    "preswald>=0.1.33",
    "pandas",
    "plotly",
    "geopandas"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["."]